# natural-number

./: LICENSE  natural-number.cabal
Data/: NaturalNumber.hs
